@@ -2,6 +2,7 @@
 
 	* tryXpath/scripts/try_xpath_functions.js:
 	Define findFrameElement function.
+	Define findFrameIndex function.
 
 	* tryXpath/scripts/try_xpath_content.js:
 	Remove findFrameElement function.
